Добавляет правки с дз№5

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
           </ul>
           <ul class="list portfolio-list">
             <li class="item potf-item">
-              <a href="" class="link">
+              <a href="" class="link potf-item-link">
                 <div class="thumb-portf">
                   <img src="./images/tekhnokryak.jpg" alt="фото ноутбука" />
                   <div class="text-portf">
@@ -80,7 +80,7 @@
               </a>
             </li>
             <li class="item potf-item">
-              <a href="" class="link">
+              <a href="" class="link potf-item-link">
                 <div class="thumb-portf">
                   <img
                     src="./images/posterstar.jpg"
@@ -103,7 +103,7 @@
               </a>
             </li>
             <li class="item potf-item">
-              <a href="" class="link"
+              <a href="" class="link potf-item-link"
                 ><div class="thumb-portf">
                   <img
                     src="./images/restrantseafood.jpg"
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="item potf-item">
-              <a href="" class="link"
+              <a href="" class="link potf-item-link"
                 ><div class="thumb-portf">
                   <img src="./images/projectprime.jpg" alt="фото наушников" />
                   <div class="text-portf">
@@ -146,7 +146,7 @@
               </a>
             </li>
             <li class="item potf-item">
-              <a href="" class="link"
+              <a href="" class="link potf-item-link"
                 ><div class="thumb-portf">
                   <img src="./images/projectboxes.jpg" alt="фото коробок" />
                   <div class="text-portf">
@@ -166,7 +166,7 @@
               </a>
             </li>
             <li class="item potf-item">
-              <a href="" class="link"
+              <a href="" class="link potf-item-link"
                 ><div class="thumb-portf">
                   <img
                     src="./images/inspirationhasno.jpg"
@@ -189,7 +189,7 @@
               </a>
             </li>
             <li class="item potf-item">
-              <a href="" class="link"
+              <a href="" class="link potf-item-link"
                 ><div class="thumb-portf">
                   <img src="./images/izdanielimiteded.jpg" alt="фото журнала" />
                   <div class="text-portf">
@@ -209,7 +209,7 @@
               </a>
             </li>
             <li class="item potf-item">
-              <a href="" class="link"
+              <a href="" class="link potf-item-link"
                 ><div class="thumb-portf">
                   <img src="./images/projectlab.jpg" alt="фото бирки" />
                   <div class="text-portf">
@@ -229,7 +229,7 @@
               </a>
             </li>
             <li class="item potf-item">
-              <a href="" class="link"
+              <a href="" class="link potf-item-link"
                 ><div class="thumb-portf">
                   <img src="./images/growingbusiness.jpg" alt="фото ноутбука" />
                   <div class="text-portf">
