исправляет ошибку общего тега баттон и удаляет свгшки

--- a/index.html
+++ b/index.html
@@ -473,13 +473,37 @@
 
       <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-          <a class="clsbtn" href="./index.html" data-modal-close
-            ><img
-              src="./images/closebtn.svg"
-              alt="close"
-              width="11"
-              height="11"
-          /></a>
+          <form class="modal-form" autocomplete="off">
+            <h2 class="modal-text">Оставьте свои данные, мы вам перезвоним</h2>
+            <button class="clsbtn" type="button" data-modal-close>
+              <svg class="close" width="11px" height="11px">
+                <use href="./images/mdlspite.svg#icon-closebtn"></use>
+              </svg>
+            </button>
+            <label class="form-group"
+              >
+            <span class="labelform">Имя</span>
+              <input type="text" name="name" placeholder="" class="form-input"
+            /></label>
+            <label class="form-group"
+              >
+            <span class="labelform">Телефон</span>
+              <input type="tel" name="tel" placeholder="" class="form-input"
+            /></label>
+            <label class="form-group"
+              >
+            <span class="labelform">Почта</span>
+              <input type="email" name="mail" placeholder="" class="form-input"
+            /></label>
+            <label class="comment"
+              
+            <span class="labelcomment">Комментарий</span>
+              <textarea type="text"></textarea>
+            </label>
+            <label class="label-checkbox">
+              <input type="checkbox" name="mdlbox" class="modalcheckbox" />
+            </label>
+          </form>
         </div>
       </div>
     </main>
