Добавляет стили к чекбоксу

--- a/index.html
+++ b/index.html
@@ -530,8 +530,11 @@
             <div class="conditions">
               <label class="label-checkbox">
                 <input type="checkbox" name="mdlbox" class="modalcheckbox" />
-                Соглашаюсь с рассылкой и принимаю
-                <a class="mdl-a" href="#"> Условия договора</a>
+                <span class="mdl-icon"></span
+                ><span class="mdlconditions"
+                  >Соглашаюсь с рассылкой и принимаю
+                  <a class="mdl-a" href="#"> Условия договора</a></span
+                >
               </label>
             </div>
             <div class="btn-align">
