Добавляет форму в футере "Подписаться на рассылку"

--- a/index.html
+++ b/index.html
@@ -624,13 +624,18 @@
           </ul>
         </div>
         <div class="mailbtn">
-          <p class="foot-p">Подпишитесь на рассылку</p>
-          <input class="input-f" type="text" placeholder="E-mail" /><button
-            type="button"
-            class="btn-portf"
-          >
-            Подписаться
-          </button>
+          <form class="footer-form">
+            <label class="footer-label">
+              <input
+                class="input-f"
+                type="email"
+                placeholder="E-mail"
+              />Подпишитесь на рассылку</label
+            >
+            <button type="submit" class="btn-portf">
+              Подписаться
+            </button>
+          </form>
         </div>
       </div>
     </footer>
